--- a/100DaysOfCodeChallenge/booklibrary/backend/auth-service/package.json
+++ b/100DaysOfCodeChallenge/booklibrary/backend/auth-service/package.json
@@ -10,11 +10,13 @@
   "author": "Wisnu Prasojo Widianto",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/colors": "^1.2.1",
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
+    "bcrypt": "^5.0.1",
     "colors": "^1.4.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
