--- a/100DaysOfCodeChallenge/booklibrary/backend/auth-service/package.json
+++ b/100DaysOfCodeChallenge/booklibrary/backend/auth-service/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/colors": "^1.2.1",
-    "@types/cookie-session": "^2.0.44",
+    "@types/cookie-session": "^2.0.43",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "colors": "^1.4.0",
-    "cookie-session": "^2.0.0",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
