--- a/100DaysOfCodeChallenge/booklibrary/backend/user-service/package.json
+++ b/100DaysOfCodeChallenge/booklibrary/backend/user-service/package.json
@@ -1,35 +1,34 @@
 {
-  "name": "kpi-service",
+  "name": "user-service",
   "version": "1.0.0",
-  "description": "This is kpi service for booklibrary project, created using NodeJs and ExpressJs Framework. This service is for gaining insight and maintain all of library project services.",
+  "description": "This is user service for booklibrary project, created using NodeJs and ExpressJs Framework",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "dev-test": "ts-node-dev src/index-test.ts",
     "test": "jest --watchAll --no-cache"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "setupFilesAfterEnv": [
-      "./src/test/setup.ts"
-    ]
   },
   "author": "Wisnu Prasojo Widianto",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/colors": "^1.2.1",
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "colors": "^1.4.0",
+    "@types/jsonwebtoken": "^8.5.6",
+    "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
+    "colors": "^1.4.44-liberty-2",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.0",
-    "mongoose": "^6.1.4",
-    "ts-node-dev": "^1.1.8"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.5",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
@@ -37,7 +36,6 @@
     "jest": "^27.4.7",
     "mongodb-memory-server": "^8.1.0",
     "supertest": "^6.1.6",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4"
+    "ts-jest": "^27.1.2"
   }
 }
