--- a/100DaysOfCodeChallenge/booklibrary/backend/user-service/package.json
+++ b/100DaysOfCodeChallenge/booklibrary/backend/user-service/package.json
@@ -18,7 +18,7 @@
     "@types/jsonwebtoken": "^8.5.6",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
-    "colors": "^1.4.44-liberty-2",
+    "colors": "^1.4.1",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -29,13 +29,5 @@
     "mongoose": "^6.1.5",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
-  },
-  "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/supertest": "^2.0.11",
-    "jest": "^27.4.7",
-    "mongodb-memory-server": "^8.1.0",
-    "supertest": "^6.1.6",
-    "ts-jest": "^27.1.2"
   }
 }
