--- a/100DaysOfCodeChallenge/booklibrary/frontend/package.json
+++ b/100DaysOfCodeChallenge/booklibrary/frontend/package.json
@@ -3,17 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.2.8",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
+    "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-bootstrap": "^0.24.5",
+    "@types/react-router-dom": "^5.3.2",
+    "apexcharts": "^3.33.0",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-bootstrap": "^0.26.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "typescript": "^4.5.4",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -39,5 +52,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/material-ui": "^0.21.12",
+    "autoprefixer": "^10.4.2",
+    "typescript": "^4.5.4",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.15"
   }
 }
