--- a/100DaysOfCodeChallenge/booklibrary/backend/common-service/package.json
+++ b/100DaysOfCodeChallenge/booklibrary/backend/common-service/package.json
@@ -1,26 +1,36 @@
 {
-  "name": "common-service",
+  "name": "@wpw-library/common",
   "version": "1.0.0",
-  "description": "This is common service for booklibrary project, created using NodeJs and ExpressJs Framework",
-  "main": "index.js",
+  "description": "This is common code for book library project",
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts",
+  "files": [
+    "build/**/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "del ./build/*",
+    "build": "npm run clean && tsc",
+    "pub": "git add . && git commit -m \"Updates common\" && npm version patch && npm run build && npm publish"
   },
   "author": "Wisnu Prasojo Widianto",
   "license": "ISC",
+  "devDependencies": {
+    "del-cli": "^4.0.1",
+    "typescript": "^4.5.4"
+  },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/colors": "^1.2.1",
     "@types/cookie-session": "^2.0.44",
-    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.7",
+    "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
+    "cookie-session": "^2.0.0",
     "express": "^4.17.2",
-    "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.0",
-    "mongoose": "^6.1.4",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.4"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.6"
   }
 }
